--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -66,7 +66,7 @@ jobs:
       - name: Install dependencies
         run: ${{ steps.detect-package-manager.outputs.manager }} ${{ steps.detect-package-manager.outputs.command }}
       - name: Build with Vite
-        run: ${{ steps.detect-package-manager.outputs.runner }} vite build
+        run: ${{ steps.detect-package-manager.outputs.runner }} vite build --base=/dodled-jump/
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
         with:
